# crusty-code

./: .gitignore  CreateBuildRun.txt  PublicAlphaServiceList.txt  README.md
ALPHA/: README.txt  TEMPLATE.RS  TEMPLATE.toml  rs_masterList.txt
ALPHA/DynamoDB/AddItem/: Cargo.toml
ALPHA/DynamoDB/CreateTable/: Cargo.toml
ALPHA/DynamoDB/CreateTable/src/: main.rs
ALPHA/DynamoDB/ListItems/src/: main.rs
ALPHA/autoscaling/: Cargo.toml
ALPHA/batch/: Cargo.toml
ALPHA/cloudformation/: Cargo.toml
ALPHA/cognitoidentity/: Cargo.toml
ALPHA/cognitoidentityprovider/: Cargo.toml
ALPHA/cognitosync/: Cargo.toml
ALPHA/config/: info.txt
ALPHA/dynamodb/: Cargo.toml
ALPHA/dynamodb/AddItem/: Cargo.toml
ALPHA/dynamodb/AddItem/src/: main.rs
ALPHA/dynamodb/CRUD/src/: main.rs
ALPHA/dynamodb/CreateTable/: Cargo.toml
ALPHA/dynamodb/CreateTable/src/: main.rs
ALPHA/dynamodb/DeleteItem/: Cargo.toml
ALPHA/dynamodb/DeleteItem/src/: main.rs
ALPHA/dynamodb/DeleteTable/: Cargo.toml
ALPHA/dynamodb/DeleteTable/src/: main.rs
ALPHA/dynamodb/ListItems/: Cargo.toml
ALPHA/dynamodb/ListItems/src/: main.rs
ALPHA/dynamodb/ListTables/: Cargo.toml
ALPHA/dynamodb/ListTables/src/: main.rs
ALPHA/dynamodb/dynamo-add-item/src/: main.rs
ALPHA/dynamodb/dynamo-create-table/src/: main.rs
ALPHA/dynamodb/dynamo-delete-item/src/: main.rs
ALPHA/dynamodb/dynamo-delete-table/src/: main.rs
ALPHA/dynamodb/dynamo-list-items/src/: main.rs
ALPHA/dynamodb/dynamo-list-tables/src/: main.rs
ALPHA/dynamodb/dynamo-movies/: Cargo.toml
ALPHA/dynamodb/dynamo-movies/src/: main.rs
ALPHA/dynamotest/: Cargo.toml
ALPHA/ebs/: Cargo.toml
ALPHA/exif/: Cargo.toml  response.txt
ALPHA/exif/src/: main.rs
ALPHA/getsaying/: Cargo.toml
ALPHA/getsaying/src/: main.rs
ALPHA/iam/: Cargo.toml  policy_doc.json
ALPHA/kinesis/: Cargo.toml
ALPHA/kinesis/create_stream/: Cargo.toml
ALPHA/kinesis/delete_stream/: Cargo.toml
ALPHA/kinesis/describe_stream/: Cargo.toml
ALPHA/kinesis/kinesis-create-stream/src/: main.rs
ALPHA/kinesis/kinesis-delete-stream/src/: main.rs
ALPHA/kinesis/kinesis-describe-stream/src/: main.rs
ALPHA/kinesis/kinesis-list-streams/src/: main.rs
ALPHA/kinesis/kinesis-put-record/src/: main.rs
ALPHA/kinesis/list_streams/: Cargo.toml
ALPHA/kinesis/put_record/: Cargo.toml
ALPHA/kinesis/put_record/src/: main.rs
ALPHA/kms/: Cargo.toml
ALPHA/kms-helloworld/: Cargo.toml
ALPHA/kms/CreateKey/: Cargo.toml
ALPHA/kms/CreateKey/src/: main.rs
ALPHA/kms/Decrypt/: Cargo.toml
ALPHA/kms/Decrypt/src/: main.rs
ALPHA/kms/Encrypt/: Cargo.toml
ALPHA/kms/Encrypt/src/: main.rs
ALPHA/kms/GenerateDataKey/: Cargo.toml
ALPHA/kms/GenerateDataKey/src/: main.rs
ALPHA/kms/GenerateDataKeyWithoutPlaintext/: Cargo.toml
ALPHA/kms/GenerateDataKeyWithoutPlaintext/src/: main.rs
ALPHA/kms/GenerateRandom/: Cargo.toml
ALPHA/kms/GenerateRandom/src/: main.rs
ALPHA/kms/ReEncryptData/: Cargo.toml
ALPHA/kms/ReEncryptData/src/: main.rs
ALPHA/lambda/: Cargo.toml
ALPHA/medialive/: Cargo.toml
ALPHA/mediapackage/: Cargo.toml
ALPHA/polly/: Cargo.toml
ALPHA/polly/describe_voices/: Cargo.toml
ALPHA/polly/list_lexicons/: Cargo.toml
ALPHA/polly/put_lexicon/: Cargo.toml
ALPHA/polly/synthesize_speech/: Cargo.toml
ALPHA/polly/synthesize_speech/src/: main.rs
ALPHA/qldb/: Cargo.toml
ALPHA/rds/: Cargo.toml
ALPHA/rdsdata/: Cargo.toml
ALPHA/route53/: Cargo.toml
ALPHA/s3/: Cargo.toml
ALPHA/sagemaker/: Cargo.toml
ALPHA/secretsmanager/: Cargo.toml
ALPHA/ses/: Cargo.toml
ALPHA/snowball/: Cargo.toml
ALPHA/sns/: Cargo.toml
ALPHA/sqs/: Cargo.toml
ALPHA/ssm/: Cargo.toml
ALPHA/sts/: Cargo.toml
ALPHA/tmp/DynamoDB/AddItem/src/: main.rs
ALPHA/tmp/DynamoDB/ListItems/src/: main.rs
ALPHA/tmp/ListItems/: Cargo.toml
ALPHA/transcribestreaming/: Cargo.toml
ALPHA/transcribestreaming/src/: main.rs
ReadJsonFile/: Cargo.toml  config.json
ReadJsonFile/src/: main.rs
aws-sdk-main-2021-03-02/: Cargo.toml
aws-sdk-main-2021-03-02/aws-hyper/: Cargo.toml
aws-sdk-main-2021-03-02/dynamodb/src/: input.rs
aws-sdk-main-2021-03-02/kinesis/src/: input.rs
aws-sdk-main-2021-03-02/kms/src/: input.rs
aws-sdk-main-2021-03-02/secretsmanager/src/: input.rs
functions/: Cargo.toml
functions/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
variables/: Cargo.toml
