[package]
name = "dynamodb-code-examples"
version = "0.1.0"
authors = ["Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamodb = { package = "aws-sdk-dynamodb", path = "../../build/aws-sdk/dynamodb" }
smithy-http = { path = "../../build/aws-sdk/smithy-http" }
aws-types = { path = "../../build/aws-sdk/aws-types" }
aws-hyper = { path = "../../build/aws-sdk/aws-hyper"}

tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.2.18"
# bytes = "1"
# hyper = "0.14.7"
structopt = { version = "0.3", default-features = false }

# [profile.dev]
# split-debuginfo = "unpacked"
