[package]
name = "sts-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sts = { package = "aws-sdk-sts", path = "../../build/aws-sdk/sts" }
dynamodb = { package = "aws-sdk-dynamodb", path = "../../build/aws-sdk/dynamodb"}
aws-auth = { package = "aws-auth", path = "../../build/aws-sdk/aws-auth" }
aws-types = { path = "../../build/aws-sdk/aws-types" }
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
tracing-subscriber = "0.2.18"
