[package]
name = "delete_table"
version = "0.1.0"
authors = ["Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamodb = { path = "../../../aws-sdk-main-2021-03-02/dynamodb" }
aws-hyper = { path = "../../../aws-sdk-main-2021-03-02/aws-hyper"}
tokio = { version = "1", features = ["full"] }

clap = { version = "2.33.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# used only for static endpoint configuration:
http = "0.2.3"

# used only to enable basic logging:
env_logger = "0.8.2"
