[package]
name = "encrypt"
version = "0.1.0"
authors = ["Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"
description = "Code example of the KMS Encrypt API"

[dependencies]
kms = { path = "../../../aws-sdk-main-2021-04-02/kms" }
aws-hyper = { path = "../../../aws-sdk-main-2021-04-02/aws-hyper" }
tokio = { version = "1", features = ["full"]}
base64 = "0.13.0"
clap = { version = "2.33.3" }
# optional
env_logger = "0.8.2"
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
