[package]
name = "generate-data-key"
version = "0.1.0"
authors = ["Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"
description = "Code example of the KMS GenerateDataKey API"

[dependencies]
kms = { path = "../../../aws-sdk-main-2021-03-02/kms" }
aws-hyper = { path = "../../../aws-sdk-main-2021-03-02/aws-hyper" }
tokio = { version = "1", features = ["full"]}
# optional
env_logger = "0.8.2"
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
